--- a/bucket.yaml
+++ b/bucket.yaml
@@ -4,10 +4,14 @@ Resources:
   MyBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: axitsamplepipelinebucket1  # bucket name must be unique and not use upper case.
+      BucketName: axitsamplepipelinebucket2  # bucket name must be unique and not use upper case.
       AccessControl: Private
       VersioningConfiguration:
         Status: Enabled
       Tags:
         - Key: Name
           Value: My S3 Bucket
+Outputs:
+  S3Bucket:
+    Description: S3Bucket Name
+    Value: !Ref MyBucket
