--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,3 +14,6 @@ artifacts:
   files: 
     - lambda.yaml
     - archive.zip
+    - prodParameter.json
+    - qaParameter.json
+    - devParameter.json
